--- a/offline-checker/index.html
+++ b/offline-checker/index.html
@@ -4,6 +4,19 @@
         <title>Offline checker</title>
         <meta chrset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <style>
+            #pingButton {
+                border-radius: 50%;
+                width: 3rem;
+                height: 3rem;
+                position: fixed;
+                right: 1rem;
+                bottom: 1rem;
+            }
+            body {
+                margin-bottom: 5rem;
+            }
+        </style>
     </head>
     <body>
         <h1 id="header"></h1>
