--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <title>800147 on Github</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
+    <link rel="stylesheet" href="https://800147.github.io/tools/src/Document/Document.css" />
   </head>
-  <body>
-    <h2>800147 on Github</h2>
+  <body class="Document">
+    <h1>800147 on Github</h1>
     <ul>
       <li>
         <a href="/scrumpoker/">Scrum poker</a>
