--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
       <li>
         <a href="/showhtml/">Show HTML</a>
       </li>
+      <li>
+        <a href="/tools">Web tools</a>
+      </li>
     </ul>
   </body>
 </html>
