new Document format

--- a/index.html
+++ b/index.html
@@ -6,38 +6,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
     <link rel="stylesheet" href="https://800147.github.io/tools/src/Document/Document.css" />
   </head>
-  <body class="Document">
-    <h1>800147 on Github</h1>
-    <ul>
-      <li>
-        <a href="/scrumpoker/">Scrum poker</a>
-      </li>
-      <li>
-        <a href="/regexpmatcher/">RegExp Matcher</a>
-      </li>
-      <li>
-        <p>
-          <a href="/regexpreplacer/">RegExp Replacer</a>
-        </p>
-        <ul>
-          <li>
-            <a href="/regexpreplacer/?base=&f0=%2C%7C%5C%7B%7C%5C%5B&r0=%24%26%5Cn&up-0=%E2%88%A7&f1=%5C%7D%7C%5C%5D&r1=%5Cn%24%26&f2=%5E%22%5Cw%2B%3F%22%3A&r2=%24%26+&m2=on&f3=%5Cn%28%5B%5E%22%5D*%22%2C%3F+%3F%29%5Cn&r3=%241%5Cn&o3=on&l3=on&f4=%5E&r4=%5Ct&m4=on&o4=on&f5=%24&r5=%5Ct&m5=on&f6=%5C%7B%7C%5C%5B&r6=%24%26%5Ct&f7=%5Ct%5Cn%28%5C%7D%7C%5C%5D%29&r7=%5Cn%241&f8=%5E%5Ct%28%5Ct*%29%28.*%3F%29%28%5Ct*%3F%29%24%5Cn%28%3F%21%5Ct%29&r8=%5Ct%241%242%5Cn%241%243&m8=on&o8=on&l8=on&f9=%5E%5Ct&r9=&m9=on&f10=%5Ct&r10=++&f11=%28%5C%7B%7C%5C%5B%29%5Cn%5Cs*%28%5C%7D%7C%5C%5D%29&r11=%241+%242">
-              JSON indenter
-            </a>
-          </li>
-          <li>
-            <a href="/regexpreplacer/?base=&f0=%3C%5C%21--.*%3F.*%3F--%3E%7C%3C.*%3F%3E&r0=%5Cn%24%26&up-0=%E2%88%A7&f1=%28%3C.*%3F%3E%29%28.%2B%29&r1=%241%5Cn%242&f2=%24&r2=%5Ct&m2=on&f3=%5E%3C%5Cw%2B.*%5B%5E%5C%2F%5D%3E%5Cs*%24&r3=%24%26%5Ct&m3=on&f4=%5Ct%28%5Cn%3C%5C%2F%5B%5E%5Ct%5D*%29&r4=%241&f5=%5E%3C&r5=%5Ct%3C&m5=on&o5=on&f6=%5E%5Ct%28%5Ct*%29%28.*%3F%29%28%5Ct*%3F%29%24%5Cn%28%3F%21%5Ct%29&r6=%5Ct%241%242%5Cn%241%243&m6=on&o6=on&l6=on&f7=%5E%5Ct&r7=&m7=on&f8=%5Ct&r8=++&f9=%3C%28%5Cw*%29%28.*%3F%29%3E%5Cs*%28.*%3F%29%5Cs*%3C%5C%2F%5C1%3E&r9=%3C%241%242%3E%243%3C%2F%241%3E&f10=%5Cn&r10=&o10=on">
-              XML indenter
-            </a>
-          </li>
-        </ul>
-      </li>
-      <li>
-        <a href="/showhtml/">Show HTML</a>
-      </li>
-      <li>
-        <a href="/tools">Web tools</a>
-      </li>
-    </ul>
+  <body class="Document-Body">
+    <main class="Document Document_page">
+      <h1>800147 on Github</h1>
+      <ul>
+        <li>
+          <a href="/scrumpoker/">Scrum poker</a>
+        </li>
+        <li>
+          <a href="/regexpmatcher/">RegExp Matcher</a>
+        </li>
+        <li>
+          <p>
+            <a href="/regexpreplacer/">RegExp Replacer</a>
+          </p>
+          <ul>
+            <li>
+              <a href="/regexpreplacer/?base=&f0=%2C%7C%5C%7B%7C%5C%5B&r0=%24%26%5Cn&up-0=%E2%88%A7&f1=%5C%7D%7C%5C%5D&r1=%5Cn%24%26&f2=%5E%22%5Cw%2B%3F%22%3A&r2=%24%26+&m2=on&f3=%5Cn%28%5B%5E%22%5D*%22%2C%3F+%3F%29%5Cn&r3=%241%5Cn&o3=on&l3=on&f4=%5E&r4=%5Ct&m4=on&o4=on&f5=%24&r5=%5Ct&m5=on&f6=%5C%7B%7C%5C%5B&r6=%24%26%5Ct&f7=%5Ct%5Cn%28%5C%7D%7C%5C%5D%29&r7=%5Cn%241&f8=%5E%5Ct%28%5Ct*%29%28.*%3F%29%28%5Ct*%3F%29%24%5Cn%28%3F%21%5Ct%29&r8=%5Ct%241%242%5Cn%241%243&m8=on&o8=on&l8=on&f9=%5E%5Ct&r9=&m9=on&f10=%5Ct&r10=++&f11=%28%5C%7B%7C%5C%5B%29%5Cn%5Cs*%28%5C%7D%7C%5C%5D%29&r11=%241+%242">
+                JSON indenter
+              </a>
+            </li>
+            <li>
+              <a href="/regexpreplacer/?base=&f0=%3C%5C%21--.*%3F.*%3F--%3E%7C%3C.*%3F%3E&r0=%5Cn%24%26&up-0=%E2%88%A7&f1=%28%3C.*%3F%3E%29%28.%2B%29&r1=%241%5Cn%242&f2=%24&r2=%5Ct&m2=on&f3=%5E%3C%5Cw%2B.*%5B%5E%5C%2F%5D%3E%5Cs*%24&r3=%24%26%5Ct&m3=on&f4=%5Ct%28%5Cn%3C%5C%2F%5B%5E%5Ct%5D*%29&r4=%241&f5=%5E%3C&r5=%5Ct%3C&m5=on&o5=on&f6=%5E%5Ct%28%5Ct*%29%28.*%3F%29%28%5Ct*%3F%29%24%5Cn%28%3F%21%5Ct%29&r6=%5Ct%241%242%5Cn%241%243&m6=on&o6=on&l6=on&f7=%5E%5Ct&r7=&m7=on&f8=%5Ct&r8=++&f9=%3C%28%5Cw*%29%28.*%3F%29%3E%5Cs*%28.*%3F%29%5Cs*%3C%5C%2F%5C1%3E&r9=%3C%241%242%3E%243%3C%2F%241%3E&f10=%5Cn&r10=&o10=on">
+                XML indenter
+              </a>
+            </li>
+          </ul>
+        </li>
+        <li>
+          <a href="/showhtml/">Show HTML</a>
+        </li>
+        <li>
+          <a href="/tools">Web tools</a>
+        </li>
+      </ul>
+    </main>
   </body>
 </html>
