--- a/index.html
+++ b/index.html
@@ -10,12 +10,9 @@
     <main class="Document Document_page">
       <h1>800147 on Github</h1>
       <ul>
-        <li>
-          <a href="/scrumpoker/">Scrum poker</a>
-        </li>
-        <li>
-          <a href="/regexpmatcher/">RegExp Matcher</a>
-        </li>
+        <li><a href="/kids-game/about">Kids Game</a></li>
+        <li><a href="/scrumpoker/">Scrum poker</a></li>
+        <li><a href="/regexpmatcher/">RegExp Matcher</a></li>
         <li>
           <p>
             <a href="/regexpreplacer/">RegExp Replacer</a>
@@ -33,12 +30,8 @@
             </li>
           </ul>
         </li>
-        <li>
-          <a href="/showhtml/">Show HTML</a>
-        </li>
-        <li>
-          <a href="/tools">Web tools</a>
-        </li>
+        <li><a href="/showhtml/">Show HTML</a></li>
+        <li><a href="/tools">Web tools</a></li>
       </ul>
     </main>
   </body>
