--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
   <body class="Document-Body">
     <main class="Document Document_page">
       <h1>800147 on Github</h1>
+      <h2>Hello</h2>
+      <p>
+        My name is Boolat Kamalov. Here you can see the list of projects I uploaded to Github.
+        Some of them were made for specific tasks, others — to learn something and the rest
+        were made just for fun. I hope you will find here something interesting or even useful.
+      </p>
+      <p>
+        If you want to see my professional experience, you can check out
+        <a
+          href="https://800147.github.io/boolat-kamalov/web-developer/"
+          target="_blank"
+          rel="noreferrer"
+        >my resume</a>.
+      </p>
+      <h2>My stuff</h2>
       <ul>
         <li><a href="/kids-game/about">Kids Game</a></li>
         <li><a href="/scrumpoker/">Scrum poker</a></li>
