scrum-poker link

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <h2>My stuff</h2>
       <ul>
         <li><a href="/kids-game/about">Kids Game</a></li>
-        <li><a href="/scrumpoker/">Scrum poker</a></li>
+        <li><a href="/scrum-poker/about">Scrum Poker</a></li>
         <li><a href="/regexpmatcher/">RegExp Matcher</a></li>
         <li>
           <p>
@@ -49,5 +49,13 @@
         <li><a href="/tools">Web tools</a></li>
       </ul>
     </main>
+    <!-- <div class="Rulers" aria-hidden="true">
+      <div class="Rulers-Ruler" style="--size: var(--size-4xl);" draggable="true"></div>
+      <div class="Rulers-Ruler" style="--size: var(--size-3xl);" draggable="true"></div>
+      <div class="Rulers-Ruler" style="--size: var(--size-2xl);" draggable="true"></div>
+      <div class="Rulers-Ruler" style="--size: var(--size-xl);" draggable="true"></div>
+      <div class="Rulers-Ruler" style="--size: var(--size-l);" draggable="true"></div>
+      <div class="Rulers-Ruler" style="--size: var(--size-m);" draggable="true"></div>
+    </div> -->
   </body>
 </html>
