--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <ul>
         <li><a href="/kids-game/about">Kids Game</a></li>
         <li><a href="/scrum-poker/about">Scrum Poker</a></li>
+        <li><a href="/soft-ad-block">Soft Ad Block</a></li>
         <li><a href="/regexpmatcher/">RegExp Matcher</a></li>
         <li>
           <p>
