--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>800147 on Github</title>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>800147 on Github</title>
+    <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
+    <link rel="icon" type="image/png" href="./favicon.png" />
     <link rel="stylesheet" href="https://800147.github.io/tools/src/Document/Document.css" />
+    <link rel="stylesheet" href="./ProjectCards.css" />
   </head>
   <body class="Document-Body">
     <main class="Document Document_page">
-      <h1>800147 on Github</h1>
-      <h2>Hello</h2>
+      <h1>Boolat Kamalov on Github</h1>
+      <h2>Introduction</h2>
       <p>
-        My name is Boolat Kamalov. Here you can see the list of projects I uploaded to Github.
+        Hello, my name is Boolat, here you can see the list of projects I uploaded to Github.
         Some of them were made for specific tasks, others — to learn something and the rest
         were made just for fun. I hope you will find here something interesting or even useful.
       </p>
@@ -24,11 +27,87 @@
         >my resume</a>.
       </p>
       <h2>My stuff</h2>
-      <ul>
-        <li><a href="/kids-game/about">Kids Game</a></li>
-        <li><a href="/scrum-poker/about">Scrum Poker</a></li>
-        <li><a href="/soft-ad-block">Soft Ad Block</a></li>
-        <li><a href="/rtu/en">Russian-Tatar united keyboard layout</a></li>
+      <ul class="Document-Exclude ProjectCards">
+        <li class="ProjectCards-ListItem">
+          <a class="ProjectCards-Card" href="/kids-game/about">
+            <img
+              class="ProjectCards-Icon"
+              width="32"
+              height="32"
+              src="https://800147.github.io/kids-game/img/favicon.png"
+            />
+            <span class="ProjectCards-Title Document-Text Document-Text_serifCaption">
+              Kids game
+            </span>
+          </a>
+        </li>
+        <li class="ProjectCards-ListItem">
+          <a class="ProjectCards-Card" href="/scrum-poker/about">
+            <img
+              class="ProjectCards-Icon"
+              width="32"
+              height="32"
+              src="https://800147.github.io/scrum-poker/img/favicon.svg"
+            />
+            <span class="ProjectCards-Title Document-Text Document-Text_serifCaption">
+              Scrum poker
+            </span>
+          </a>
+        </li>
+        <li class="ProjectCards-ListItem">
+          <a class="ProjectCards-Card" href="/soft-ad-block">
+            <img
+              class="ProjectCards-Icon"
+              width="32"
+              height="32"
+              src="https://800147.github.io/soft-ad-block/img/favicon.svg"
+            />
+            <span class="ProjectCards-Title Document-Text Document-Text_serifCaption">
+              Soft ad block
+            </span>
+          </a>
+        </li>
+        <!-- <li class="ProjectCards-ListItem">
+          <a class="ProjectCards-Card" href="/xylophone">
+            <img
+              class="ProjectCards-Icon"
+              width="32"
+              height="32"
+              src="https://800147.github.io/xylophone/img/favicon.svg"
+            />
+            <span class="ProjectCards-Title Document-Text Document-Text_serifCaption">
+              Xylophone notes
+            </span>
+          </a>
+        </li> -->
+        <li class="ProjectCards-ListItem">
+          <a class="ProjectCards-Card" href="/rtu/en">
+            <img
+              class="ProjectCards-Icon"
+              width="32"
+              height="32"
+              src="https://800147.github.io/rtu/favicon.svg"
+            />
+            <span class="ProjectCards-Title Document-Text Document-Text_serifCaption">
+              Russian-Tatar united keyboard layout
+            </span>
+          </a>
+        </li>
+        <li class="ProjectCards-ListItem">
+          <a class="ProjectCards-Card" href="/tools">
+            <img
+              class="ProjectCards-Icon"
+              width="32"
+              height="32"
+              src="https://800147.github.io/tools/img/favicon.svg"
+            />
+            <span class="ProjectCards-Title Document-Text Document-Text_serifCaption">
+              Web tools
+            </span>
+          </a>
+        </li>
+      </ul>
+      <!-- <ul>
         <li><a href="/regexpmatcher/">RegExp Matcher</a></li>
         <li>
           <p>
@@ -48,8 +127,7 @@
           </ul>
         </li>
         <li><a href="/showhtml/">Show HTML</a></li>
-        <li><a href="/tools">Web tools</a></li>
-      </ul>
+      </ul> -->
     </main>
     <!-- <div class="Rulers" aria-hidden="true">
       <div class="Rulers-Ruler" style="--size: var(--size-4xl);" draggable="true"></div>
