Document-Button in index.html

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>800147 on Github</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Boolat Kamalov on Github</title>
     <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
     <link rel="icon" type="image/png" href="./favicon.png" />
     <link rel="stylesheet" href="https://800147.github.io/tools/src/Document/Document.css" />
@@ -20,11 +21,12 @@
       </p>
       <p>
         If you want to see my professional experience, you can check out
-        <a
-          href="https://800147.github.io/boolat-kamalov/web-developer/"
-          target="_blank"
-          rel="noreferrer"
-        >my resume</a>.
+          <a
+            class="Document-Button"
+            href="https://800147.github.io/boolat-kamalov/web-developer/"
+            target="_blank"
+            rel="noreferrer"
+          >my resume</a>.
       </p>
       <h2>My stuff</h2>
       <ul class="Document-Exclude ProjectCards">
