--- a/documents/Fedora.html
+++ b/documents/Fedora.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>800147 on Github</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Fedora — 800147.github.io</title>
     <link rel="stylesheet" href="https://800147.github.io/tools/src/Document/Document.css" />
   </head>
   <body class="Document-Body">
