link to xylophone

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
             </span>
           </a>
         </li>
-        <!-- <li class="ProjectCards-ListItem">
-          <a class="ProjectCards-Card" href="/xylophone">
+        <li class="ProjectCards-ListItem">
+          <a class="ProjectCards-Card" href="/xylophone/about">
             <img
               class="ProjectCards-Icon"
               width="32"
@@ -78,10 +78,10 @@
               src="https://800147.github.io/xylophone/img/favicon.svg"
             />
             <span class="ProjectCards-Title Document-Text Document-Text_serifCaption">
-              Xylophone notes
+              Xylophone melody
             </span>
           </a>
-        </li> -->
+        </li>
         <li class="ProjectCards-ListItem">
           <a class="ProjectCards-Card" href="/rtu/en">
             <img
