--- a/documents/Fedora.html
+++ b/documents/Fedora.html
@@ -7,8 +7,8 @@
     <title>Fedora — 800147.github.io</title>
     <link rel="stylesheet" href="https://800147.github.io/tools/src/Document/Document.css" />
   </head>
-  <body class="Document-Body">
-    <main class="Document Document_page">
+  <body class="Document">
+    <main>
 <h1>Fedora</h1>
 
 <h2>Установка</h2>
