--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://800147.github.io/tools/src/Document/Document.css" />
     <link rel="stylesheet" href="./ProjectCards.css" />
   </head>
-  <body class="Document-Body">
-    <main class="Document Document_page">
+  <body class="Document">
+    <main>
       <h1>Boolat Kamalov on Github</h1>
       <h2>Introduction</h2>
       <p>
