color-scheme meta tag

--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     <title>Boolat Kamalov on Github</title>
     <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
     <link rel="icon" type="image/png" href="./favicon.png" />
-    <link rel="stylesheet" href="https://800147.github.io/tools/src/Document/Document.css" />
+    <meta
+      name="description"
+      content="Hello, my name is Boolat, here you can see the list of projects I uploaded to Github"
+    />
+    <meta name="color-scheme" content="light dark" />
+    <link
+      rel="stylesheet"
+      href="https://800147.github.io/tools/src/Document/Document.css"
+    />
     <link rel="stylesheet" href="./ProjectCards.css" />
   </head>
   <body class="Document">
@@ -15,18 +23,20 @@
       <h1>Boolat Kamalov on Github</h1>
       <h2>Introduction</h2>
       <p>
-        Hello, my name is Boolat, here you can see the list of projects I uploaded to Github.
-        Some of them were made for specific tasks, others — to learn something and the rest
-        were made just for fun. I hope you will find here something interesting or even useful.
+        Hello, my name is Boolat, here you can see the list of projects I
+        uploaded to Github. Some of them were made for specific tasks, others —
+        to learn something and the rest were made just for fun. I hope you will
+        find here something interesting or even useful.
       </p>
       <p>
         If you want to see my professional experience, you can check out
-          <a
-            class="Document-Button"
-            href="https://800147.github.io/boolat-kamalov/web-developer/"
-            target="_blank"
-            rel="noreferrer"
-          >my resume</a>.
+        <a
+          class="Document-Button"
+          href="https://800147.github.io/boolat-kamalov/web-developer/"
+          target="_blank"
+          rel="noreferrer"
+          >my resume</a
+        >.
       </p>
       <h2>My stuff</h2>
       <ul class="Document-Exclude ProjectCards">
@@ -38,7 +48,9 @@
               height="32"
               src="https://800147.github.io/kids-game/img/favicon.png"
             />
-            <span class="ProjectCards-Title Document-Text Document-Text_serifCaption">
+            <span
+              class="ProjectCards-Title Document-Text Document-Text_serifCaption"
+            >
               Kids game
             </span>
           </a>
@@ -51,7 +63,9 @@
               height="32"
               src="https://800147.github.io/scrum-poker/img/favicon.svg"
             />
-            <span class="ProjectCards-Title Document-Text Document-Text_serifCaption">
+            <span
+              class="ProjectCards-Title Document-Text Document-Text_serifCaption"
+            >
               Scrum poker
             </span>
           </a>
@@ -64,7 +78,9 @@
               height="32"
               src="https://800147.github.io/soft-ad-block/img/favicon.svg"
             />
-            <span class="ProjectCards-Title Document-Text Document-Text_serifCaption">
+            <span
+              class="ProjectCards-Title Document-Text Document-Text_serifCaption"
+            >
               Soft ad block
             </span>
           </a>
@@ -77,7 +93,9 @@
               height="32"
               src="https://800147.github.io/xylophone/img/favicon.svg"
             />
-            <span class="ProjectCards-Title Document-Text Document-Text_serifCaption">
+            <span
+              class="ProjectCards-Title Document-Text Document-Text_serifCaption"
+            >
               Xylophone melody
             </span>
           </a>
@@ -90,7 +108,9 @@
               height="32"
               src="https://800147.github.io/rtu/favicon.svg"
             />
-            <span class="ProjectCards-Title Document-Text Document-Text_serifCaption">
+            <span
+              class="ProjectCards-Title Document-Text Document-Text_serifCaption"
+            >
               Russian-Tatar united keyboard layout
             </span>
           </a>
@@ -103,7 +123,9 @@
               height="32"
               src="https://800147.github.io/tools/img/favicon.svg"
             />
-            <span class="ProjectCards-Title Document-Text Document-Text_serifCaption">
+            <span
+              class="ProjectCards-Title Document-Text Document-Text_serifCaption"
+            >
               Web tools
             </span>
           </a>
