--- a/index.html
+++ b/index.html
@@ -56,6 +56,21 @@
           </a>
         </li>
         <li class="ProjectCards-ListItem">
+          <a class="ProjectCards-Card" href="/palette/about">
+            <img
+              class="ProjectCards-Icon"
+              width="32"
+              height="32"
+              src="https://800147.github.io/palette/favicon.svg"
+            />
+            <span
+              class="ProjectCards-Title Document-Text Document-Text_serifCaption"
+            >
+              6-bit color palette
+            </span>
+          </a>
+        </li>
+        <li class="ProjectCards-ListItem">
           <a class="ProjectCards-Card" href="/scrum-poker/about">
             <img
               class="ProjectCards-Icon"
