--- a/404.html
+++ b/404.html
@@ -2,26 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page not found</title>
-    <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
-    <link rel="icon" type="image/png" href="./favicon.png" />
     <meta name="color-scheme" content="light dark" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Page not found</title>
     <link
       rel="stylesheet"
-      href="https://800147.github.io/tools/src/Document/Document.css"
+      href="https://800147.github.io/document/src/document.css"
     />
-    <style>
-      h2 {
-        --accent-color: var(--dark-1);
-      }
-      @media (prefers-color-scheme: dark) {
-        h2 {
-          --accent-color: var(--light-4);
-        }
-      }
-    </style>
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
   </head>
   <body class="Document">
     <nav class="Document-Breadcrumbs">
@@ -31,7 +21,7 @@
     </nav>
     <main>
       <h1>404</h1>
-      <h2>Page not found</h2>
+      <h2 style="color: var(--grey-color)">Page not found</h2>
       <p>
         The page you are looking for doesn't exist (at least not here). You can
         go to main page and find something else.
