--- a/index.html
+++ b/index.html
@@ -2,21 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="color-scheme" content="light dark" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Boolat Kamalov on Github</title>
-    <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
-    <link rel="icon" type="image/png" href="./favicon.png" />
     <meta
       name="description"
       content="Hello, my name is Boolat, here you can see the list of projects I uploaded to Github"
     />
-    <meta name="color-scheme" content="light dark" />
     <link
       rel="stylesheet"
-      href="https://800147.github.io/tools/src/Document/Document.css"
+      href="https://800147.github.io/document/src/document.css"
     />
-    <link rel="stylesheet" href="./ProjectCards.css" />
+    <link rel="stylesheet" href="https://800147.github.io/ProjectCards.css" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
   </head>
   <body class="Document">
     <main>
