Project Card max width

--- a/404.html
+++ b/404.html
@@ -21,7 +21,7 @@
     </nav>
     <main>
       <h1>404</h1>
-      <h2 style="color: var(--grey-color)">Page not found</h2>
+      <h2 style="--color: var(--grey-color)">Page not found</h2>
       <p>
         The page you are looking for doesn't exist (at least not here). You can
         go to main page and find something else.
