--- a/404.html
+++ b/404.html
@@ -12,6 +12,11 @@
     />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="icon" type="image/png" href="/favicon.png" />
+    <style>
+      :root {
+        --accent-color: var(--grey-color);
+      }
+    </style>
   </head>
   <body class="Document">
     <nav class="Document-Breadcrumbs">
@@ -21,7 +26,7 @@
     </nav>
     <main>
       <h1>404</h1>
-      <h2 style="--color: var(--grey-color)">Page not found</h2>
+      <h2>Page not found</h2>
       <p>
         The page you are looking for doesn't exist (at least not here). You can
         go to main page and find something else.
