--- a/index.html
+++ b/index.html
@@ -176,5 +176,12 @@
       <div class="Rulers-Ruler" style="--size: var(--size-l);" draggable="true"></div>
       <div class="Rulers-Ruler" style="--size: var(--size-m);" draggable="true"></div>
     </div> -->
+    <!-- Cloudflare Web Analytics -->
+    <script
+      defer
+      src='https://static.cloudflareinsights.com/beacon.min.js'
+      data-cf-beacon='{"token": "01ed86e7ec1e4311aca302985f6ebcab"}'
+    ></script>
+    <!-- End Cloudflare Web Analytics -->
   </body>
 </html>
