--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           </a>
         </li>
         <li class="ProjectCards-ListItem">
-          <a class="ProjectCards-Card" href="/soft-ad-block">
+          <a class="ProjectCards-Card" href="/soft-ad-block/">
             <img
               class="ProjectCards-Icon"
               width="32"
@@ -131,7 +131,7 @@
           </a>
         </li>
         <li class="ProjectCards-ListItem">
-          <a class="ProjectCards-Card" href="/tools">
+          <a class="ProjectCards-Card" href="/tools/">
             <img
               class="ProjectCards-Icon"
               width="32"
@@ -179,7 +179,7 @@
     <!-- Cloudflare Web Analytics -->
     <script
       defer
-      src='https://static.cloudflareinsights.com/beacon.min.js'
+      src="https://static.cloudflareinsights.com/beacon.min.js"
       data-cf-beacon='{"token": "01ed86e7ec1e4311aca302985f6ebcab"}'
     ></script>
     <!-- End Cloudflare Web Analytics -->
